ajout du module authenticate ajout de material angular, angular-message, material-design-iconic-font modification design layout

--- a/src/client/app/modules/layout.html
+++ b/src/client/app/modules/layout.html
@@ -1,4 +1,5 @@
-<div class="container">
-    <h1>t2stream</h1>
-    <div ui-view="viewA"></div>
+<div layout="row" layout-fill>
+    <div flex layout="row">
+        <div ui-view="viewA" flex layout="row"></div>
+    </div>
 </div>
