--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,14 +4,14 @@
     <title>t2stream</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="css/style.css">
 
     <!-- bower:css -->
     <!-- bower installed css files will go here... -->
     <!-- endinject -->
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <div ui-view></div>
+    <div class="full-height" ui-view></div>
 
     <!-- bower:js -->
     <!-- bower installed scripts will go here... -->
