--- a/src/client/app/modules/dashboard/index/index.html
+++ b/src/client/app/modules/dashboard/index/index.html
@@ -10,7 +10,7 @@
                 <md-button flex class="md-primary" ng-click="vm.doClick()">
                     clickMe
                 </md-button>
-                <md-button flex class="md-primary" ui-sref="modules.authentication">
+                <md-button flex class="md-primary" ui-sref="authentication.login">
                     Login
                 </md-button>
             </md-card-content>
