--- a/src/client/app/modules/authentication/login/login.html
+++ b/src/client/app/modules/authentication/login/login.html
@@ -33,13 +33,13 @@
                         </md-input-container>
 
                         <md-input-container>
-                            <md-button flex class="md-primary" href="#/forgot" translate="LOGIN.FORGOT"></md-button>
+                            <md-button flex class="md-primary" href="#/forgot" translate="LOGIN.FORGOT" aria-label="{{'LOGIN.FORGOT' | translate}}"></md-button>
                         </md-input-container>
                     </div>
 
-                    <md-button class="md-raised md-primary full-width margin-left-0 margin-right-0 margin-top-10 margin-bottom-10"  ng-click="vm.loginClick()" ng-disabled="login.$invalid" translate="LOGIN.BUTTON"></md-button>
+                    <md-button class="md-raised md-primary full-width margin-left-0 margin-right-0 margin-top-10 margin-bottom-10"  ng-click="vm.loginClick()" ng-disabled="login.$invalid" translate="LOGIN.BUTTON" aria-label="{{'LOGIN.BUTTON' | translate}}"></md-button>
 
-                    <md-button class="md-primary full-width margin-left-0 margin-right-0 margin-top-10 margin-bottom-10" href="#/signup" translate="LOGIN.SIGNUP_LINK"></md-button>
+                    <md-button class="md-primary full-width margin-left-0 margin-right-0 margin-top-10 margin-bottom-10" ui-sref="authentication.register" translate="LOGIN.SIGNUP_LINK" aria-label="{{'LOGIN.SIGNUP_LINK' | translate}}"></md-button>
                 </form>
             </md-content>
         </md-card>
