add layout and translate switch  - sidenav  - toolbar  - content  - footer

--- a/src/client/app/modules/dashboard/index/index.html
+++ b/src/client/app/modules/dashboard/index/index.html
@@ -7,12 +7,7 @@
                 </div>
             </md-toolbar>
             <md-card-content layout="row">
-                <md-button flex class="md-primary" ng-click="vm.doClick()">
-                    clickMe
-                </md-button>
-                <md-button flex class="md-primary" ui-sref="authentication.login">
-                    Login
-                </md-button>
+                <md-button flex class="md-primary" ng-click="vm.doClick()" translate="ADMIN.TOOLBAR.LOGOUT" aria-label="{'ADMIN.TOOLBAR.LOGOUT' | translate}"></md-button>
             </md-card-content>
         </md-card>
     </div>
